精确替换26个联系我们链接从#到/about.html#contact

--- a/free/detail/kaggle.html
+++ b/free/detail/kaggle.html
@@ -743,7 +743,7 @@
                         <li><a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors">网站地图</a></li>
                         <li><a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/about.html#terms" class="text-light-300 hover:text-primary transition-colors">使用条款</a></li>
-                        <li><a href="#" class="text-light-300 hover:text-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-light-300 hover:text-primary transition-colors">联系我们</a></li>
                         <li><a href="https://www.kaggle.com" class="text-light-300 hover:text-primary transition-colors" target="_blank" rel="noopener noreferrer">Kaggle官网</a></li>
                     </ul>
                 </div>
