--- a/developer/linustorvalds.html
+++ b/developer/linustorvalds.html
@@ -828,7 +828,7 @@
                     <h3 class="text-lg font-semibold mb-4">信息</h3>
                     <ul class="space-y-2">
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
