--- a/free/detail/cursor.html
+++ b/free/detail/cursor.html
@@ -823,7 +823,7 @@
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">博客</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">招贤纳士</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                     </ul>
                 </div>
