--- a/free/detail/deepseek.html
+++ b/free/detail/deepseek.html
@@ -1171,7 +1171,7 @@
                         <li><a href="/about.html#about" class="text-dark-400 hover:text-deepseek-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">新闻动态</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">加入我们</a></li>
-                        <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-dark-400 hover:text-deepseek-primary transition-colors">联系我们</a></li>
                         <li><a href="/about.html#privacy" class="text-dark-400 hover:text-deepseek-primary transition-colors">隐私政策</a></li>
                         <li><a href="/about.html#terms" class="text-dark-400 hover:text-deepseek-primary transition-colors">服务条款</a></li>
                     </ul>
