--- a/free/detail/fastapi.html
+++ b/free/detail/fastapi.html
@@ -573,7 +573,7 @@ async def read_item(item_id: int, q: str = None):
                         <li><a href="/" class="text-gray-400 hover:text-primary transition-colors">首页</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
                 </div>
             </div>
