--- a/free/detail/freenom.html
+++ b/free/detail/freenom.html
@@ -583,7 +583,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">最新添加</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">热门资源</a></li>
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
                 </div>
                 
