--- a/free/detail/glitch.html
+++ b/free/detail/glitch.html
@@ -1240,7 +1240,7 @@
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                     <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">联系我们</a>
+                    <a href="/about.html#contact" class="text-gray-500 hover:text-gray-300 text-sm">联系我们</a>
                 </div>
             </div>
         </div>
