--- a/free/detail/gradio.html
+++ b/free/detail/gradio.html
@@ -906,7 +906,7 @@ Running on public URL: https://xxxx.gradio.app</code></pre>
                         <li><a href="/about.html#terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">版权声明</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
                     </ul>
                 </div>
             </div>
