--- a/free/detail/replit.html
+++ b/free/detail/replit.html
@@ -639,7 +639,7 @@
                         <ul class="space-y-3">
                             <li><a href="/" class="text-gray-400 hover:text-primary transition-colors">首页</a></li>
                             <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
-                            <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
+                            <li><a href="/about.html#contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                             <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于本站</a></li>
                             <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">免责声明</a></li>
                         </ul>
