--- a/free/ide.html
+++ b/free/ide.html
@@ -1154,7 +1154,7 @@
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="/about.html#terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
+                        <li><a href="/about.html#contact" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于本站</a></li>
                     </ul>
                 </div>
