--- a/free/push.html
+++ b/free/push.html
@@ -780,7 +780,7 @@
             <li><a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
             <li><a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a></li>
             <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
-            <li><a href="#" class="hover:text-primary transition-colors">联系我们</a></li>
+            <li><a href="/about.html#contact" class="hover:text-primary transition-colors">联系我们</a></li>
           </ul>
         </div>
         
