--- a/hello/detail/motivate.html
+++ b/hello/detail/motivate.html
@@ -1142,7 +1142,7 @@
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">使用帮助</a>
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">词汇库</a>
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">学习资源</a>
-          <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">联系我们</a>
+          <a href="/about.html#contact" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">联系我们</a>
         </div>
         
         <div class="flex space-x-4">
