--- a/free/detail/doubao.html
+++ b/free/detail/doubao.html
@@ -665,7 +665,7 @@
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="/about.html#terms" class="text-light-300 hover:text-primary text-sm transition-colors">服务条款</a>
-                    <a href="#" class="text-light-300 hover:text-primary text-sm transition-colors">Cookie政策</a>
+                    <a href="/about.html#cookies" class="text-light-300 hover:text-primary text-sm transition-colors">Cookie政策</a>
                 </div>
             </div>
         </div>
