--- a/free/detail/freenom.html
+++ b/free/detail/freenom.html
@@ -594,7 +594,7 @@
                         <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">免责声明</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
+                        <li><a href="/about.html#cookies" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
                     </ul>
                 </div>
             </div>
