--- a/free/detail/jest.html
+++ b/free/detail/jest.html
@@ -1182,7 +1182,7 @@ yarn test</code></pre>
                     <ul class="space-y-3">
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
+                        <li><a href="/about.html#cookies" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
                 </div>
