--- a/free/detail/spring-boot.html
+++ b/free/detail/spring-boot.html
@@ -608,7 +608,7 @@ java -jar target/myproject-0.0.1-SNAPSHOT.jar</code></pre>
                 <div class="flex space-x-6 mt-4 md:mt-0">
                     <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a>
-                    <a href="#" class="hover:text-primary transition-colors">Cookie政策</a>
+                    <a href="/about.html#cookies" class="hover:text-primary transition-colors">Cookie政策</a>
                     <a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a>
                 </div>
             </div>
