--- a/free/huggingface-models.html
+++ b/free/huggingface-models.html
@@ -383,7 +383,7 @@
                 <div class="flex space-x-6 mt-4 md:mt-0">
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                     <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">Cookie政策</a>
+                    <a href="/about.html#cookies" class="text-gray-500 hover:text-gray-300 text-sm">Cookie政策</a>
                 </div>
             </div>
         </div>
