--- a/hello/detail/empower.html
+++ b/hello/detail/empower.html
@@ -1111,7 +1111,7 @@
         <div class="flex space-x-6">
           <a href="/about.html#privacy" class="text-gray-500 hover:text-word-primary transition-colors text-sm">隐私政策</a>
           <a href="/about.html#terms" class="text-gray-500 hover:text-word-primary transition-colors text-sm">服务条款</a>
-          <a href="#" class="text-gray-500 hover:text-word-primary transition-colors text-sm">Cookie政策</a>
+          <a href="/about.html#cookies" class="text-gray-500 hover:text-word-primary transition-colors text-sm">Cookie政策</a>
         </div>
       </div>
       
