--- a/free/detail/highcharts.html
+++ b/free/detail/highcharts.html
@@ -88,7 +88,7 @@
             
             <!-- 桌面导航 -->
             <ul class="hidden md:flex space-x-8">
-                <li><a href="#home" class="hover:text-primary transition-colors">首页</a></li>
+                <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
                 <li><a href="#features" class="hover:text-primary transition-colors">免费服务</a></li>
                 <li><a href="#pros-cons" class="hover:text-primary transition-colors">优缺点</a></li>
                 <li><a href="#reviews" class="hover:text-primary transition-colors">社区评论</a></li>
@@ -104,7 +104,7 @@
         <!-- 移动端导航菜单 -->
         <div id="mobile-menu" class="hidden md:hidden bg-dark-300 border-t border-dark-100">
             <ul class="container mx-auto px-4 py-2 flex flex-col space-y-3">
-                <li><a href="#home" class="block py-2 hover:text-primary transition-colors">首页</a></li>
+                <li><a href="/" class="block py-2 hover:text-primary transition-colors">首页</a></li>
                 <li><a href="#features" class="block py-2 hover:text-primary transition-colors">免费服务</a></li>
                 <li><a href="#pros-cons" class="block py-2 hover:text-primary transition-colors">优缺点</a></li>
                 <li><a href="#reviews" class="block py-2 hover:text-primary transition-colors">社区评论</a></li>
@@ -760,7 +760,7 @@ chart.setTitle({
                 <div>
                     <h4 class="text-light-100 font-semibold mb-4">快速链接</h4>
                     <ul class="space-y-2">
-                        <li><a href="#home" class="text-light-300 hover:text-primary transition-colors">首页</a></li>
+                        <li><a href="/" class="text-light-300 hover:text-primary transition-colors">首页</a></li>
                         <li><a href="#features" class="text-light-300 hover:text-primary transition-colors">免费服务</a></li>
                         <li><a href="#pros-cons" class="text-light-300 hover:text-primary transition-colors">优缺点</a></li>
                         <li><a href="#reviews" class="text-light-300 hover:text-primary transition-colors">社区评论</a></li>
