--- a/free/detail/kaggle.html
+++ b/free/detail/kaggle.html
@@ -93,7 +93,7 @@
             
             <!-- 桌面导航 -->
             <ul class="hidden md:flex space-x-8">
-                <li><a href="#home" class="hover:text-primary transition-colors">首页</a></li>
+                <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
                 <li><a href="#free-features" class="hover:text-primary transition-colors">免费功能</a></li>
                 <li><a href="#pros-cons" class="hover:text-primary transition-colors">优缺点</a></li>
                 <li><a href="#reviews" class="hover:text-primary transition-colors">社区评论</a></li>
@@ -109,7 +109,7 @@
         <!-- 移动端导航菜单 -->
         <div id="mobile-menu" class="hidden md:hidden bg-dark-300 border-t border-dark-100">
             <ul class="container mx-auto px-4 py-2 flex flex-col space-y-3">
-                <li><a href="#home" class="block py-2 hover:text-primary transition-colors">首页</a></li>
+                <li><a href="/" class="block py-2 hover:text-primary transition-colors">首页</a></li>
                 <li><a href="#free-features" class="block py-2 hover:text-primary transition-colors">免费功能</a></li>
                 <li><a href="#pros-cons" class="block py-2 hover:text-primary transition-colors">优缺点</a></li>
                 <li><a href="#reviews" class="block py-2 hover:text-primary transition-colors">社区评论</a></li>
@@ -729,7 +729,7 @@
                 <div>
                     <h4 class="text-light-100 font-semibold mb-4">快速链接</h4>
                     <ul class="space-y-2">
-                        <li><a href="#home" class="text-light-300 hover:text-primary transition-colors">首页</a></li>
+                        <li><a href="/" class="text-light-300 hover:text-primary transition-colors">首页</a></li>
                         <li><a href="#free-features" class="text-light-300 hover:text-primary transition-colors">免费功能</a></li>
                         <li><a href="#pros-cons" class="text-light-300 hover:text-primary transition-colors">优缺点</a></li>
                         <li><a href="#reviews" class="text-light-300 hover:text-primary transition-colors">社区评论</a></li>
