--- a/free/detail/mysql.html
+++ b/free/detail/mysql.html
@@ -150,7 +150,7 @@
         <div class="container mx-auto px-4 md:px-6">
             <div class="flex justify-between items-center py-4">
                 <!-- Logo -->
-                <a href="#home" class="flex items-center">
+                <a href="/" class="flex items-center">
                     <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-mysql-primary to-mysql-accent flex items-center justify-center mr-3">
                         <i class="fa fa-database text-white text-xl"></i>
                     </div>
