--- a/free/detail/vue.html
+++ b/free/detail/vue.html
@@ -82,7 +82,7 @@
       
       <!-- 桌面导航 -->
       <nav class="hidden md:flex space-x-8">
-        <a href="#home" class="text-white hover:text-primary transition-colors">首页</a>
+        <a href="/" class="text-white hover:text-primary transition-colors">首页</a>
         <a href="#services" class="text-white hover:text-primary transition-colors">免费服务</a>
         <a href="#pros" class="text-white hover:text-primary transition-colors">优点</a>
         <a href="#cons" class="text-white hover:text-primary transition-colors">缺点</a>
@@ -99,7 +99,7 @@
     <!-- 移动端导航菜单 -->
     <div id="mobile-menu" class="md:hidden hidden bg-dark/95 backdrop-blur-md">
       <div class="container mx-auto px-4 py-4 flex flex-col space-y-4">
-        <a href="#home" class="text-white hover:text-primary transition-colors py-2">首页</a>
+        <a href="/" class="text-white hover:text-primary transition-colors py-2">首页</a>
         <a href="#services" class="text-white hover:text-primary transition-colors py-2">免费服务</a>
         <a href="#pros" class="text-white hover:text-primary transition-colors py-2">优点</a>
         <a href="#cons" class="text-white hover:text-primary transition-colors py-2">缺点</a>
