--- a/free/payment.html
+++ b/free/payment.html
@@ -294,7 +294,7 @@
             <tr class="hover:bg-gray-50 transition-colors service-row" data-category="china developer">
               <td class="py-3 px-4 border-b font-medium">微信支付 (WeChat Pay)</td>
               <td class="py-3 px-4 border-b">
-                <a href="https://pay.weixin.qq.com/index.php/core/home/login" target="_blank" class="text-primary hover:underline flex items-center">
+                <a href="/" target="_blank" class="text-primary hover:underline flex items-center">
                   <i class="fa fa-external-link mr-1 text-xs"></i> 访问官网
                 </a>
               </td>
@@ -473,7 +473,7 @@
               <span class="service-tag bg-blue-100 text-blue-800">社交生态</span>
             </div>
             <div class="flex justify-end">
-              <a href="https://pay.weixin.qq.com/index.php/core/home/login" target="_blank" class="text-primary text-sm hover:underline">访问 <i class="fa fa-external-link text-xs ml-1"></i></a>
+              <a href="/" target="_blank" class="text-primary text-sm hover:underline">访问 <i class="fa fa-external-link text-xs ml-1"></i></a>
             </div>
           </div>
           
