--- a/api.html
+++ b/api.html
@@ -69,7 +69,7 @@
   <header class="bg-white shadow-sm sticky top-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
       <!-- Logo区域 -->
-      <a href="index.html" class="flex items-center space-x-2 group">
+      <a href="/" class="flex items-center space-x-2 group">
         <div class="w-10 h-10 rounded-lg bg-gradient-blue flex items-center justify-center transition-transform duration-300 group-hover:scale-110">
           <i class="fa fa-code text-white text-xl"></i>
         </div>
@@ -78,7 +78,7 @@
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-8">
-        <a href="index.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
+        <a href="/" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
         <a href="categories.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">分类页</a>
         <a href="map.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">地图导航</a>
         <a href="api.html" class="text-primary font-medium relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-full after:bg-primary">API手册</a>
@@ -93,7 +93,7 @@
     <!-- 移动端导航菜单 -->
     <div class="md:hidden hidden bg-white border-t border-gray-100 absolute w-full left-0 shadow-md" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="index.html" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="py-2 text-muted hover:text-primary transition-colors">分类页</a>
         <a href="map.html" class="py-2 text-muted hover:text-primary transition-colors">地图导航</a>
         <a href="api.html" class="py-2 text-primary font-medium">API手册</a>
@@ -130,7 +130,7 @@
     <nav class="flex text-sm" aria-label="面包屑导航">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -622,7 +622,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">快速链接</h3>
           <ul class="space-y-2 text-gray-400">
-            <li><a href="index.html" class="hover:text-primary transition-colors duration-200">首页</a></li>
+            <li><a href="/" class="hover:text-primary transition-colors duration-200">首页</a></li>
             <li><a href="categories.html" class="hover:text-primary transition-colors duration-200">分类页</a></li>
             <li><a href="map.html" class="hover:text-primary transition-colors duration-200">地图导航</a></li>
             <li><a href="api.html" class="hover:text-primary transition-colors duration-200">API手册</a></li>
