--- a/free/detail/glitch.html
+++ b/free/detail/glitch.html
@@ -316,7 +316,7 @@
                             <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
                             <div class="w-3 h-3 rounded-full bg-green-500"></div>
                         </div>
-                        <div class="ml-4 text-gray-400 text-sm">index.html</div>
+                        <div class="ml-4 text-gray-400 text-sm">/</div>
                     </div>
                     <div class="bg-dark-light p-6 font-mono text-sm leading-relaxed overflow-x-auto">
                         <div class="text-orange-400">&lt;!DOCTYPE html&gt;</div>
