--- a/free/detail/letsencrypt.html
+++ b/free/detail/letsencrypt.html
@@ -653,7 +653,7 @@ server {
     
     # 网站根目录
     root /var/www/example.com;
-    index index.html;
+    index /;
     
     # 其他配置...
     location / {
