--- a/free/detail/nginx.html
+++ b/free/detail/nginx.html
@@ -495,7 +495,7 @@ sudo chmod -R 755 /var/www</pre>
                         </p>
                         
                         <div class="code-block text-dark-400 mb-6 bg-dark-900">
-                            <pre>nano /var/www/example.com/html/index.html</pre>
+                            <pre>nano /var/www/example.com/html//</pre>
                         </div>
                         
                         <p class="text-dark-500 mb-4">
@@ -532,7 +532,7 @@ sudo chmod -R 755 /var/www</pre>
     listen [::]:80;
 
     root /var/www/example.com/html;
-    index index.html index.htm index.nginx-debian.html;
+    index / index.htm index.nginx-debian.html;
 
     server_name example.com www.example.com;
 
