--- a/free/detail/react.html
+++ b/free/detail/react.html
@@ -596,7 +596,7 @@
               <p>my-first-react-app/</p>
               <p>&nbsp;&nbsp;node_modules/</p>
               <p>&nbsp;&nbsp;public/</p>
-              <p>&nbsp;&nbsp;&nbsp;&nbsp;index.html</p>
+              <p>&nbsp;&nbsp;&nbsp;&nbsp;/</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;favicon.ico</p>
               <p>&nbsp;&nbsp;src/</p>
               <p>&nbsp;&nbsp;&nbsp;&nbsp;App.js</p>
@@ -611,7 +611,7 @@
               <li class="flex items-start gap-3">
                 <i class="fa fa-file-code-o text-primary mt-1"></i>
                 <div>
-                  <span class="font-medium">public/index.html</span> - 应用的 HTML 入口文件
+                  <span class="font-medium">public//</span> - 应用的 HTML 入口文件
                 </div>
               </li>
               <li class="flex items-start gap-3">
