--- a/free/education.html
+++ b/free/education.html
@@ -88,12 +88,12 @@
   <!-- 顶部导航 -->
   <header class="bg-white/95 backdrop-blur sticky top-0 z-50 border-b border-gray-100">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2" aria-label="返回首页">
+      <a href="/" class="flex items-center gap-2" aria-label="返回首页">
         <i class="fa fa-compass text-primary text-2xl" aria-hidden="true"></i>
         <span class="text-xl md:text-2xl font-bold">资源导航</span>
       </a>
       <nav class="hidden md:flex items-center gap-6">
-        <a href="index.html" class="hover:text-primary">首页</a>
+        <a href="/" class="hover:text-primary">首页</a>
         <a href="ai.html" class="hover:text-primary">AI接口</a>
         <a href="#education" class="text-primary font-semibold">教育接口</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" rel="noopener" class="text-muted hover:text-primary flex items-center gap-2">
@@ -107,7 +107,7 @@
     </div>
     <div id="mobileMenu" class="md:hidden hidden border-t border-gray-100">
       <div class="container mx-auto px-4 py-3 grid gap-3">
-        <a href="index.html" class="py-2 hover:text-primary">首页</a>
+        <a href="/" class="py-2 hover:text-primary">首页</a>
         <a href="ai.html" class="py-2 hover:text-primary">AI接口</a>
         <a href="#education" class="py-2 text-primary font-semibold">教育接口</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" rel="noopener" class="py-2 hover:text-primary flex items-center gap-2">
@@ -157,7 +157,7 @@
   <div class="container mx-auto px-4 py-3 bg-white border-b border-gray-100">
     <nav aria-label="Breadcrumb" class="text-sm">
       <ol class="inline-flex items-center gap-2">
-        <li><a href="index.html" class="text-muted hover:text-primary"><i class="fa fa-home mr-1"></i> 首页</a></li>
+        <li><a href="/" class="text-muted hover:text-primary"><i class="fa fa-home mr-1"></i> 首页</a></li>
         <li aria-hidden="true" class="text-muted">/</li>
         <li><span class="text-muted">资源分类</span></li>
         <li aria-hidden="true" class="text-muted">/</li>
