--- a/free/image.html
+++ b/free/image.html
@@ -64,7 +64,7 @@
             
             <!-- 桌面端导航 -->
             <div class="hidden md:flex items-center space-x-6">
-                <a href="index.html" class="text-dark hover:text-primary transition-colors">首页</a>
+                <a href="/" class="text-dark hover:text-primary transition-colors">首页</a>
                 <a href="weather.html" class="text-dark hover:text-primary transition-colors">天气接口</a>
                 <a href="ai.html" class="text-dark hover:text-primary transition-colors">AI接口</a>
                 <a href="icons.html" class="text-dark hover:text-primary transition-colors">图标资源</a>
@@ -82,7 +82,7 @@
         <!-- 移动端导航菜单（默认隐藏） -->
         <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-                <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+                <a href="/" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
                 <a href="weather.html" class="py-2 text-dark hover:text-primary transition-colors">天气接口</a>
                 <a href="ai.html" class="py-2 text-dark hover:text-primary transition-colors">AI接口</a>
                 <a href="icons.html" class="py-2 text-dark hover:text-primary transition-colors">图标资源</a>
@@ -147,7 +147,7 @@
         <nav class="flex text-sm" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-3">
                 <li class="inline-flex items-center">
-                    <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+                    <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
                         <i class="fa fa-home mr-2"></i>首页
                     </a>
                 </li>
@@ -663,7 +663,7 @@
                 <div>
                     <h3 class="text-lg font-medium mb-4">相关链接</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
+                        <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="weather.html" class="hover:text-primary transition-colors">天气接口</a></li>
                         <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
                         <li><a href="icons.html" class="hover:text-primary transition-colors">图标资源</a></li>
