--- a/free/instagram-scraping.html
+++ b/free/instagram-scraping.html
@@ -67,15 +67,15 @@
   <header class="bg-white shadow-sm sticky top-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo区域 -->
-      <a href="../index.html" class="flex items-center space-x-2">
+      <a href="..//" class="flex items-center space-x-2">
         <i class="fa fa-cloud-server text-primary text-2xl"></i>
         <h1 class="text-xl md:text-2xl font-bold text-primary">云服务资源导航</h1>
       </a>
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="../index.html" class="text-dark hover:text-primary transition-colors">首页</a>
-        <a href="index.html" class="text-dark hover:text-primary transition-colors">资源分类</a>
+        <a href="..//" class="text-dark hover:text-primary transition-colors">首页</a>
+        <a href="/" class="text-dark hover:text-primary transition-colors">资源分类</a>
         <a href="../sitemap.html" class="text-dark hover:text-primary transition-colors">网站地图</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
@@ -91,10 +91,10 @@
     <!-- 移动端导航菜单（默认隐藏） -->
     <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
-        <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">资源分类</a>
+        <a href="..//" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-dark hover:text-primary transition-colors">资源分类</a>
         <a href="../sitemap.html" class="py-2 text-dark hover:text-primary transition-colors">网站地图</a>
-        <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">免费资源总览</a>
+        <a href="/" class="py-2 text-dark hover:text-primary transition-colors">免费资源总览</a>
         <a href="categories.html" class="py-2 text-primary font-medium">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 贡献资源
@@ -154,7 +154,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="../index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="..//" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -809,7 +809,7 @@
           <h3 class="text-lg font-medium mb-4">快速链接</h3>
           <ul class="space-y-2 text-gray-400">
             <li><a href="categories.html" class="hover:text-primary transition-colors">资源分类</a></li>
-            <li><a href="index.html" class="hover:text-primary transition-colors">免费资源总览</a></li>
+            <li><a href="/" class="hover:text-primary transition-colors">免费资源总览</a></li>
             <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
             <li><a href="vps.html" class="hover:text-primary transition-colors">免费云服务</a></li>
             <li><a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
