--- a/free/monitor.html
+++ b/free/monitor.html
@@ -61,7 +61,7 @@
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="index.html" class="text-dark hover:text-primary transition-colors">首页</a>
+        <a href="/" class="text-dark hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="text-dark hover:text-primary transition-colors">资源分类</a>
         <a href="websocket.html" class="text-dark hover:text-primary transition-colors">WebSocket服务</a>
         <a href="#" class="text-primary font-medium">监控服务</a>
@@ -77,7 +77,7 @@
     <!-- 移动端导航菜单（默认隐藏） -->
     <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="py-2 text-dark hover:text-primary transition-colors">资源分类</a>
         <a href="websocket.html" class="py-2 text-dark hover:text-primary transition-colors">WebSocket服务</a>
         <a href="#" class="py-2 text-primary font-medium">监控服务</a>
@@ -140,7 +140,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -654,7 +654,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">相关链接</h3>
           <ul class="space-y-2 text-gray-400">
-            <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
+            <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
             <li><a href="categories.html" class="hover:text-primary transition-colors">资源分类</a></li>
             <li><a href="websocket.html" class="hover:text-primary transition-colors">WebSocket服务</a></li>
             <li><a href="tools.html" class="hover:text-primary transition-colors">开发工具</a></li>
