--- a/apis.html
+++ b/apis.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-50">
   <header class="bg-white shadow-sm">
     <div class="container mx-auto px-4 py-4">
-      <a href="index.html" class="flex items-center space-x-2">
+      <a href="/" class="flex items-center space-x-2">
         <i class="fa fa-compass text-blue-600 text-2xl"></i>
         <h1 class="text-xl font-bold text-blue-600">资源导航</h1>
       </a>
