--- a/free/cicd.html
+++ b/free/cicd.html
@@ -58,14 +58,14 @@
   <header class="bg-white shadow-sm sticky top-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo区域 -->
-      <a href="../index.html" class="flex items-center space-x-2">
+      <a href="..//" class="flex items-center space-x-2">
         <i class="fa fa-compass text-primary text-2xl"></i>
         <h1 class="text-xl md:text-2xl font-bold text-primary">资源导航</h1>
       </a>
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="../index.html" class="text-dark hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="text-dark hover:text-primary transition-colors">首页</a>
         <a href="#" class="text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
@@ -82,7 +82,7 @@
     <!-- 移动端导航菜单（默认隐藏） -->
     <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="#" class="py-2 text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
@@ -123,7 +123,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="../index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="..//" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -700,7 +700,7 @@
         <div>
           <h4 class="text-lg font-medium mb-4">快速链接</h4>
           <ul class="space-y-2">
-            <li><a href="../index.html" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
+            <li><a href="..//" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
             <li><a href="#" class="text-gray-400 hover:text-white transition-colors">资源分类</a></li>
             <li>
               <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="text-gray-400 hover:text-white transition-colors flex items-center">
