--- a/free/detail/echarts.html
+++ b/free/detail/echarts.html
@@ -802,7 +802,7 @@ myChart.setOption({
                 <ul class="space-y-3">
                   <li class="flex items-start gap-3">
                     <i class="fa fa-external-link text-primary mt-1"></i>
-                    <a href="https://echarts.apache.org/zh/index.html" target="_blank" class="text-primary hover:underline">ECharts 官方网站</a>
+                    <a href="https://echarts.apache.org/zh//" target="_blank" class="text-primary hover:underline">ECharts 官方网站</a>
                   </li>
                   <li class="flex items-start gap-3">
                     <i class="fa fa-external-link text-primary mt-1"></i>
@@ -810,7 +810,7 @@ myChart.setOption({
                   </li>
                   <li class="flex items-start gap-3">
                     <i class="fa fa-external-link text-primary mt-1"></i>
-                    <a href="https://echarts.apache.org/examples/zh/index.html" target="_blank" class="text-primary hover:underline">示例库</a>
+                    <a href="https://echarts.apache.org/examples/zh//" target="_blank" class="text-primary hover:underline">示例库</a>
                   </li>
                   <li class="flex items-start gap-3">
                     <i class="fa fa-external-link text-primary mt-1"></i>
@@ -866,9 +866,9 @@ myChart.setOption({
         <div>
           <h4 class="text-lg font-semibold mb-4">资源</h4>
           <ul class="space-y-2">
-            <li><a href="https://echarts.apache.org/zh/index.html" target="_blank" class="text-gray-400 hover:text-primary transition-colors">官方网站</a></li>
+            <li><a href="https://echarts.apache.org/zh//" target="_blank" class="text-gray-400 hover:text-primary transition-colors">官方网站</a></li>
             <li><a href="https://echarts.apache.org/zh/tutorial.html" target="_blank" class="text-gray-400 hover:text-primary transition-colors">教程文档</a></li>
-            <li><a href="https://echarts.apache.org/examples/zh/index.html" target="_blank" class="text-gray-400 hover:text-primary transition-colors">示例库</a></li>
+            <li><a href="https://echarts.apache.org/examples/zh//" target="_blank" class="text-gray-400 hover:text-primary transition-colors">示例库</a></li>
             <li><a href="https://github.com/apache/echarts" target="_blank" class="text-gray-400 hover:text-primary transition-colors">GitHub</a></li>
             <li><a href="https://stackoverflow.com/questions/tagged/echarts" target="_blank" class="text-gray-400 hover:text-primary transition-colors">Stack Overflow</a></li>
           </ul>
