--- a/free/detail/elasticsearch.html
+++ b/free/detail/elasticsearch.html
@@ -661,7 +661,7 @@
                 <h3 class="text-2xl font-semibold mb-6">推荐免费学习资源</h3>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html" target="_blank" rel="noopener" class="group">
+                    <a href="https://www.elastic.co/guide/en/elasticsearch/reference/current//" target="_blank" rel="noopener" class="group">
                         <div class="bg-dark-card rounded-xl overflow-hidden border border-gray-800 transition-all group-hover:border-primary/50 group-hover:-translate-y-1 h-full flex flex-col">
                             <div class="h-40 bg-darker flex items-center justify-center">
                                 <i class="fa fa-book text-primary text-5xl"></i>
