--- a/free/detail/pytorch.html
+++ b/free/detail/pytorch.html
@@ -814,7 +814,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-6">资源</h4>
                     <ul class="space-y-3">
-                        <li><a href="https://pytorch.org/docs/stable/index.html" target="_blank" rel="noopener" class="text-gray-400 hover:text-primary transition-colors">官方文档</a></li>
+                        <li><a href="https://pytorch.org/docs/stable//" target="_blank" rel="noopener" class="text-gray-400 hover:text-primary transition-colors">官方文档</a></li>
                         <li><a href="https://pytorch.org/tutorials/" target="_blank" rel="noopener" class="text-gray-400 hover:text-primary transition-colors">教程</a></li>
                         <li><a href="https://pytorch.org/hub/" target="_blank" rel="noopener" class="text-gray-400 hover:text-primary transition-colors">模型库</a></li>
                         <li><a href="https://discuss.pytorch.org/" target="_blank" rel="noopener" class="text-gray-400 hover:text-primary transition-colors">社区论坛</a></li>
