--- a/free/detail/symfony.html
+++ b/free/detail/symfony.html
@@ -493,7 +493,7 @@
                             <p class="ml-4"><span class="text-blue-400">#[Route('/')]</span></p>
                             <p class="ml-4"><span class="text-blue-400">public function</span> <span class="text-green-300">index</span>(): <span class="text-yellow-300">Response</span></p>
                             <p class="ml-4"><span class="text-textPrimary">{</span></p>
-                            <p class="ml-8"><span class="text-blue-400">return</span> <span class="text-this">->render</span>(<span class="text-red-300">'home/index.html.twig'</span>, [</p>
+                            <p class="ml-8"><span class="text-blue-400">return</span> <span class="text-this">->render</span>(<span class="text-red-300">'home//.twig'</span>, [</p>
                             <p class="ml-12"><span class="text-red-300">'message'</span> => <span class="text-red-300">'Hello Symfony!'</span>,</p>
                             <p class="ml-8"><span class="text-textPrimary">]);</span></p>
                             <p class="ml-4"><span class="text-textPrimary">}</span></p>
@@ -547,7 +547,7 @@
                         <p class="text-textSecondary text-sm">symfony.com</p>
                     </a>
                     
-                    <a href="https://symfony.com/doc/current/index.html" target="_blank" rel="noopener noreferrer" class="bg-cardBg rounded-xl p-6 border border-border hover:border-primary/50 transition-all hover:shadow-lg hover:shadow-primary/10 flex flex-col items-center text-center group">
+                    <a href="https://symfony.com/doc/current//" target="_blank" rel="noopener noreferrer" class="bg-cardBg rounded-xl p-6 border border-border hover:border-primary/50 transition-all hover:shadow-lg hover:shadow-primary/10 flex flex-col items-center text-center group">
                         <div class="text-primary text-3xl mb-4 group-hover:scale-110 transition-transform">
                             <i class="fas fa-book"></i>
                         </div>
