--- a/free/domain.html
+++ b/free/domain.html
@@ -61,13 +61,13 @@
   <header class="bg-white shadow-sm sticky top-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo 区域 -->
-      <a href="../index.html" class="flex items-center space-x-2" aria-label="返回首页">
+      <a href="..//" class="flex items-center space-x-2" aria-label="返回首页">
         <i class="fa fa-compass text-primary text-2xl" aria-hidden="true"></i>
         <span class="text-xl md:text-2xl font-bold text-primary">资源导航</span>
       </a>
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="../index.html" class="text-dark hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="text-dark hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="submit.html" class="text-muted hover:text-primary transition-colors">提交资源</a>
         <a href="about.html" class="text-muted hover:text-primary transition-colors">关于我们</a>
@@ -83,7 +83,7 @@
     <!-- 移动端导航菜单（默认隐藏） -->
     <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="py-2 text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="submit.html" class="py-2 text-muted hover:text-primary transition-colors">提交资源</a>
         <a href="about.html" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
@@ -153,7 +153,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="../index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="..//" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2" aria-hidden="true"></i>首页
           </a>
         </li>
@@ -774,7 +774,7 @@
         <div>
           <h4 class="text-lg font-medium mb-4">快速链接</h4>
           <ul class="space-y-2">
-            <li><a href="../index.html" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
+            <li><a href="..//" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
             <li><a href="categories.html" class="text-gray-400 hover:text-white transition-colors">资源分类</a></li>
             <li><a href="submit.html" class="text-gray-400 hover:text-white transition-colors">资源提交</a></li>
             <li><a href="terms.html" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
