--- a/free/fonts.html
+++ b/free/fonts.html
@@ -61,14 +61,14 @@
     <header class="bg-white shadow-sm sticky top-0 z-50 transition-all duration-300">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <!-- Logo区域 -->
-            <a href="index.html" class="flex items-center space-x-2">
+            <a href="/" class="flex items-center space-x-2">
                 <i class="fa fa-font text-primary text-2xl"></i>
                 <h1 class="text-xl md:text-2xl font-bold text-primary">免费资源导航</h1>
             </a>
             
             <!-- 桌面端导航 -->
             <div class="hidden md:flex items-center space-x-6">
-                <a href="index.html" class="text-dark hover:text-primary transition-colors">首页</a>
+                <a href="/" class="text-dark hover:text-primary transition-colors">首页</a>
                 <a href="fonts.html" class="text-primary font-medium">字体资源</a>
                 <a href="icons.html" class="text-dark hover:text-primary transition-colors">图标资源</a>
                 <a href="#" class="text-dark hover:text-primary transition-colors">API服务</a>
@@ -87,7 +87,7 @@
         <!-- 移动端导航菜单（默认隐藏） -->
         <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-                <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
+                <a href="/" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
                 <a href="fonts.html" class="py-2 text-primary font-medium">字体资源</a>
                 <a href="icons.html" class="py-2 text-dark hover:text-primary transition-colors">图标资源</a>
                 <a href="#" class="py-2 text-dark hover:text-primary transition-colors">API服务</a>
@@ -153,7 +153,7 @@
         <nav class="flex text-sm" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-3">
                 <li class="inline-flex items-center">
-                    <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+                    <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
                         <i class="fa fa-home mr-2"></i>首页
                     </a>
                 </li>
@@ -508,7 +508,7 @@
                 <div>
                     <h3 class="text-lg font-medium mb-4">资源分类</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
+                        <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="fonts.html" class="hover:text-primary transition-colors">字体资源</a></li>
                         <li><a href="icons.html" class="hover:text-primary transition-colors">图标资源</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">API服务</a></li>
