--- a/free/icons.html
+++ b/free/icons.html
@@ -66,7 +66,7 @@
             
             <!-- 桌面端导航 -->
             <div class="hidden md:flex items-center space-x-6">
-                <a href="index.html" class="text-dark hover:text-primary transition-colors">Home / 首页</a>
+                <a href="/" class="text-dark hover:text-primary transition-colors">Home / 首页</a>
                 <a href="ai.html" class="text-dark hover:text-primary transition-colors">AI APIs / AI 接口</a>
                 <a href="#" class="text-primary font-medium">图标资源</a>
                 <a href="https://github.com" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
@@ -83,7 +83,7 @@
         <!-- 移动端导航菜单（默认隐藏） -->
         <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-                <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">Home / 首页</a>
+                <a href="/" class="py-2 text-dark hover:text-primary transition-colors">Home / 首页</a>
                 <a href="ai.html" class="py-2 text-dark hover:text-primary transition-colors">AI APIs / AI 接口</a>
                 <a href="#" class="py-2 text-primary font-medium">图标资源</a>
                 <a href="https://github.com" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
@@ -147,7 +147,7 @@
         <nav class="flex text-sm" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-3">
                 <li class="inline-flex items-center">
-                    <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+                    <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
                         <i class="fa fa-home mr-2"></i>首页
                     </a>
                 </li>
@@ -642,7 +642,7 @@
                 <div>
                     <h3 class="text-lg font-medium mb-4">相关链接</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
+                        <li><a href="/" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
                         <li><a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="https://github.com" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
