--- a/free/ide.html
+++ b/free/ide.html
@@ -1759,7 +1759,7 @@
                             </div>
                             
                             <div class="mt-6 flex justify-between items-center">
-                                <a href="https://netbeans.apache.org/download/index.html" target="_blank" rel="noopener" class="inline-flex items-center text-primary hover:text-primary/80 font-medium">
+                                <a href="https://netbeans.apache.org/download//" target="_blank" rel="noopener" class="inline-flex items-center text-primary hover:text-primary/80 font-medium">
                                     <span>访问官网</span>
                                     <i class="fa fa-external-link ml-2"></i>
                                 </a>
