--- a/free/log.html
+++ b/free/log.html
@@ -87,7 +87,7 @@
       
       <!-- 桌面端导航 - 带平滑过渡效果 -->
       <div class="hidden md:flex items-center space-x-8">
-        <a href="index.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
+        <a href="/" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
         <a href="categories.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">资源分类</a>
         <a href="websocket.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">WebSocket服务</a>
         <a href="monitoring.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">监控服务</a>
@@ -104,7 +104,7 @@
     <!-- 移动端导航菜单 - 带滑入动画 -->
     <div class="md:hidden hidden bg-white border-t border-gray-100 absolute w-full left-0 shadow-md" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3 animate-fadeIn">
-        <a href="index.html" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
         <a href="categories.html" class="py-2 text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="websocket.html" class="py-2 text-muted hover:text-primary transition-colors">WebSocket服务</a>
         <a href="monitoring.html" class="py-2 text-muted hover:text-primary transition-colors">监控服务</a>
@@ -178,7 +178,7 @@
     <nav class="flex text-sm" aria-label="面包屑导航">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -565,7 +565,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">相关链接</h3>
           <ul class="space-y-2 text-gray-400">
-            <li><a href="index.html" class="hover:text-primary transition-colors duration-200">首页</a></li>
+            <li><a href="/" class="hover:text-primary transition-colors duration-200">首页</a></li>
             <li><a href="categories.html" class="hover:text-primary transition-colors duration-200">资源分类</a></li>
             <li><a href="websocket.html" class="hover:text-primary transition-colors duration-200">WebSocket服务</a></li>
             <li><a href="monitoring.html" class="hover:text-primary transition-colors duration-200">监控服务</a></li>
