--- a/free/news.html
+++ b/free/news.html
@@ -121,7 +121,7 @@
         <!-- 导航菜单 - 优化交互 -->
         <nav class="bg-dark-900 rounded-lg p-4 mb-8 shadow-dark-card sticky top-4 z-40">
             <ul class="flex flex-wrap justify-center gap-x-8 gap-y-3 text-sm md:text-base">
-                <li><a href="index.html" class="text-primary-500 hover:text-primary-400 link-effect px-1 py-2 flex items-center">
+                <li><a href="/" class="text-primary-500 hover:text-primary-400 link-effect px-1 py-2 flex items-center">
                     <i class="fa fa-home mr-1"></i> 首页
                 </a></li>
                 <li><a href="ai.html" class="text-gray-300 hover:text-primary-500 link-effect px-1 py-2 flex items-center">
