--- a/free/ocr.html
+++ b/free/ocr.html
@@ -79,7 +79,7 @@
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-8">
-        <a href="index.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
+        <a href="/" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
         <a href="ai.html" class="text-muted hover:text-primary transition-colors duration-200 relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">AI接口</a>
         <a href="#ocr" class="text-primary font-medium relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-full after:bg-primary">OCR识别</a>
       </div>
@@ -93,7 +93,7 @@
     <!-- 移动端导航菜单 -->
     <div class="md:hidden hidden bg-white border-t border-gray-100 absolute w-full left-0 shadow-md" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="index.html" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-muted hover:text-primary transition-colors">首页</a>
         <a href="ai.html" class="py-2 text-muted hover:text-primary transition-colors">AI接口</a>
         <a href="#ocr" class="py-2 text-primary font-medium">OCR识别</a>
       </div>
@@ -127,7 +127,7 @@
     <nav class="flex text-sm" aria-label="面包屑导航">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="index.html" class="inline-flex items-center text-muted hover:text-primary transition-colors">
+          <a href="/" class="inline-flex items-center text-muted hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -732,7 +732,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">相关链接</h3>
           <ul class="space-y-2 text-gray-400">
-            <li><a href="index.html" class="hover:text-primary transition-colors duration-200">首页</a></li>
+            <li><a href="/" class="hover:text-primary transition-colors duration-200">首页</a></li>
             <li><a href="ai.html" class="hover:text-primary transition-colors duration-200">AI接口</a></li>
             <li><a href="#" class="hover:text-primary transition-colors duration-200">使用教程</a></li>
             <li><a href="#" class="hover:text-primary transition-colors duration-200">常见问题</a></li>
