--- a/free/push.html
+++ b/free/push.html
@@ -102,14 +102,14 @@
   <header class="bg-white dark:bg-darkCard shadow-sm dark:shadow-gray-900/20 sticky top-0 z-50 transition-all duration-300 dark-transition">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo区域 -->
-      <a href="../index.html" class="flex items-center space-x-2">
+      <a href="..//" class="flex items-center space-x-2">
         <i class="fa fa-compass text-primary text-2xl"></i>
         <h1 class="text-xl md:text-2xl font-bold text-primary">资源导航</h1>
       </a>
       
       <!-- 桌面端导航 + 暗黑模式切换按钮 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="../index.html" class="text-dark dark:text-darkText hover:text-primary dark:hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="text-dark dark:text-darkText hover:text-primary dark:hover:text-primary transition-colors">首页</a>
         <a href="#" class="text-primary font-medium">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
@@ -137,7 +137,7 @@
     <!-- 移动端导航菜单（默认隐藏） -->
     <div class="md:hidden hidden bg-white dark:bg-darkCard border-t border-gray-100 dark:border-darkBorder" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="../index.html" class="py-2 text-dark dark:text-darkText hover:text-primary dark:hover:text-primary transition-colors">首页</a>
+        <a href="..//" class="py-2 text-dark dark:text-darkText hover:text-primary dark:hover:text-primary transition-colors">首页</a>
         <a href="#" class="py-2 text-primary font-medium">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
@@ -201,7 +201,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="../index.html" class="inline-flex items-center text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">
+          <a href="..//" class="inline-flex items-center text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
