--- a/sitemap.html
+++ b/sitemap.html
@@ -78,14 +78,14 @@
   <header class="bg-white/80 dark:bg-dark/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo区域 -->
-      <a href="index.html" class="flex items-center space-x-2 group">
+      <a href="/" class="flex items-center space-x-2 group">
         <i class="fa fa-compass text-primary text-2xl transition-transform duration-300 group-hover:rotate-12"></i>
         <h1 class="text-xl md:text-2xl font-bold text-primary">资源导航</h1>
       </a>
       
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="index.html" class="text-dark dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors nav-link">首页</a>
+        <a href="/" class="text-dark dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors nav-link">首页</a>
         <a href="free/" class="text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors nav-link">资源分类</a>
         <a href="sitemap.html" class="text-primary font-medium nav-link">网站地图</a>
         <a href="api.html" class="text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors nav-link">API手册</a>
@@ -114,7 +114,7 @@
     <!-- 移动端导航菜单 -->
     <div class="md:hidden hidden bg-white/90 dark:bg-dark/90 backdrop-blur-sm border-t border-gray-100 dark:border-gray-800 animate-slide-up" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
-        <a href="index.html" class="py-2 text-dark dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">首页</a>
+        <a href="/" class="py-2 text-dark dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">首页</a>
         <a href="free/" class="py-2 text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">资源分类</a>
         <a href="sitemap.html" class="py-2 text-primary font-medium">网站地图</a>
         <a href="api.html" class="py-2 text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">API手册</a>
@@ -167,7 +167,7 @@
     <nav class="flex text-sm" aria-label="Breadcrumb">
       <ol class="inline-flex items-center space-x-1 md:space-x-3">
         <li class="inline-flex items-center">
-          <a href="index.html" class="inline-flex items-center text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
+          <a href="/" class="inline-flex items-center text-muted dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
             <i class="fa fa-home mr-2"></i>首页
           </a>
         </li>
@@ -652,7 +652,7 @@
         <div>
           <h4 class="text-lg font-medium mb-4">快速链接</h4>
           <ul class="space-y-2">
-            <li><a href="index.html" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
+            <li><a href="/" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
             <li><a href="free/" class="text-gray-400 hover:text-white transition-colors">资源分类</a></li>
             <li><a href="sitemap.html" class="text-white font-medium">网站地图</a></li>
             <li>
