--- a/about.html
+++ b/about.html
@@ -69,6 +69,10 @@
         body {
             font-family: 'Inter', system-ui, sans-serif;
         }
+            /* 给所有锚点 section 统一设置顶部偏移 */
+        .section-content[id] { /* 选中所有有 id 的 .section-content（即锚点目标） */
+            scroll-margin-top: 100px; /* 跳转后，元素顶部距离视口顶部预留 100px */
+        }
         
         .menu-item.active {
             background: linear-gradient(90deg, rgba(99, 102, 241, 0.2) 0%, rgba(168, 85, 247, 0.1) 100%);
@@ -212,7 +216,7 @@
                 </li>
                 <li>
                     <a href="#cookies" class="menu-item flex items-center gap-3 px-4 py-3 rounded-lg border-l-4 border-transparent hover:bg-dark-lighter/50 transition-custom text-gray-300">
-                        <i class="fa fa-cookie w-5 text-primary"></i>
+                        <i class="fa fa-cutlery w-5 text-primary"></i>
                         <span>Cookie政策</span>
                     </a>
                 </li>
@@ -402,7 +406,7 @@
             </section>
             
             <!-- 使用条款 -->
-            <section id="terms" class="section-content mb-16">
+            <section id="terms" class="section-content mb-16 "  >
                 <div class="flex items-center gap-3 mb-6">
                     <div class="w-10 h-10 rounded-lg bg-primary/20 flex items-center justify-center">
                         <i class="fa fa-file-text text-primary"></i>
