--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <header class="mb-12 text-center">
             <h1 class="text-[clamp(1.8rem,5vw,2.8rem)] font-bold text-accent mb-3">开发者资源分类目录</h1>
             <p class="text-neutral max-w-3xl mx-auto">
-                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作
+                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作 
+            
             </p>
         </header>
 
@@ -529,9 +530,15 @@
 
         <!-- 页脚 -->
         <footer class="mt-16 pt-8 border-t border-gray-200 text-center text-neutral text-sm">
-            <p>© 2023 开发者资源分类目录 | 持续更新中</p>
+            <p>© 2023 开发者资源分类目录 | 持续更新中  </p>
+            <!-- 搜索按钮 -->
+            <button id="searchBtn" class="flex items-center gap-1.5 px-3 py-1.5 rounded-lg hover:bg-gray-100 dark:hover:bg-dark-light transition-colors">
+                <i class="fa fa-search text-gray-500"></i>
+                <span class="hidden sm:inline text-sm">搜索</span>
+            </button>
         </footer>
     </div>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
     
