--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@ var _hmt = _hmt || [];
         <header class="mb-12 text-center">
             <h1 class="text-[clamp(1.8rem,5vw,2.8rem)] font-bold text-accent mb-3">开发者资源分类目录</h1>
             <p class="text-neutral max-w-3xl mx-auto">
-                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作 <button class="">
-  在线: <span id="online9">--</span> 人
-</button>
+                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作  
             <!-- 基础专业款：在线人数按钮 -->
 <button class="inline-flex items-center gap-2 px-4 py-2.5 bg-white border border-gray-200 
                rounded-lg shadow-sm text-gray-800 font-medium 
@@ -70,8 +68,8 @@ var _hmt = _hmt || [];
   <!-- 在线状态图标（绿色点表示在线） -->
   <span class="w-2 h-2 rounded-full bg-emerald-500"></span>
   <!-- 文字：人数突出 -->
-  <span id="online-number">在线人数</span>
-  <span class="text-emerald-600 font-bold text-lg">20</span>
+  <span >在线人数</span>
+  <span id="online-number" class="text-emerald-600 font-bold text-lg">1</span>
   <span>人</span>
 </button>
 
