Add all missing developers to match developer directory

--- a/index.html
+++ b/index.html
@@ -524,6 +524,61 @@ var _hmt = _hmt || [];
                                         Core contributor to Ruby on Rails and Ember.js, JavaScript expert
                                     </td>
                                 </tr>
+                                <tr class="hover:bg-neutral-light transition-colors">
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-secondary">
+                                        Dan Abramov
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                        <a href="developer/danabramov" target="_blank" class="link-effect">Check Details</a>
+                                    </td>
+                                    <td class="px-6 py-4 text-sm text-secondary">
+                                        Creator of Redux, core contributor to React
+                                    </td>
+                                </tr>
+                                <tr class="hover:bg-neutral-light transition-colors">
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-secondary">
+                                        Fabien Potencier
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                        <a href="developer/fabienpotencier" target="_blank" class="link-effect">Check Details</a>
+                                    </td>
+                                    <td class="px-6 py-4 text-sm text-secondary">
+                                        Creator of Symfony framework, PHP expert
+                                    </td>
+                                </tr>
+                                <tr class="hover:bg-neutral-light transition-colors">
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-secondary">
+                                        Jake Wharton
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                        <a href="developer/jakewharton" target="_blank" class="link-effect">Check Details</a>
+                                    </td>
+                                    <td class="px-6 py-4 text-sm text-secondary">
+                                        Creator of Retrofit and OkHttp, Android expert
+                                    </td>
+                                </tr>
+                                <tr class="hover:bg-neutral-light transition-colors">
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-secondary">
+                                        Kent C. Dodds
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                        <a href="developer/kentcdodds" target="_blank" class="link-effect">Check Details</a>
+                                    </td>
+                                    <td class="px-6 py-4 text-sm text-secondary">
+                                        JavaScript educator and React expert
+                                    </td>
+                                </tr>
+                                <tr class="hover:bg-neutral-light transition-colors">
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-secondary">
+                                        Linus Torvalds
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                        <a href="developer/linustorvalds" target="_blank" class="link-effect">Check Details</a>
+                                    </td>
+                                    <td class="px-6 py-4 text-sm text-secondary">
+                                        Creator of Linux kernel and Git
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
