Add main.js as ES module

--- a/index.html
+++ b/index.html
@@ -659,5 +659,7 @@ var _hmt = _hmt || [];
             </div>
         </div>
     </footer>
+    
+    <script type="module" src="main.js"></script>
 </body>
 </html>
