--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ var _hmt = _hmt || [];
                                         <a href="free/sound-effects" target="_blank" class="link-effect mr-4">Sound Effects</a>、
                                         <a href="free/fonts" target="_blank" class="link-effect mr-4">Fonts</a>、
                                         <a href="free/icons" target="_blank" class="link-effect mr-4">Icons</a>、
-                                        <a href="free/image" target="_blank" class="link-effect">Images</a>
+                                        <a href="free/image" target="_blank" class="link-effect mr-4">Images</a>、
+                                        <a href="free/ide" target="_blank" class="link-effect">Design IDEs</a>
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-neutral-light transition-colors">
@@ -190,7 +191,8 @@ var _hmt = _hmt || [];
                                         <a href="free/ai-image" target="_blank" class="link-effect mr-4">AI Image Gen</a>、
                                         <a href="free/ai-text" target="_blank" class="link-effect mr-4">AI Text Gen</a>、
                                         <a href="free/ai-inference" target="_blank" class="link-effect mr-4">AI Inference</a>、
-                                        <a href="free/huggingface-models" target="_blank" class="link-effect">Hugging Face Models</a>
+                                        <a href="free/huggingface-models" target="_blank" class="link-effect mr-4">Hugging Face Models</a>、
+                                        <a href="free/lowcode" target="_blank" class="link-effect">Low-Code AI</a>
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-neutral-light transition-colors">
@@ -423,7 +425,8 @@ var _hmt = _hmt || [];
                                         <a href="free/detail/canva" target="_blank" class="link-effect mr-4">Canva</a>、
                                         <a href="free/detail/excalidraw" target="_blank" class="link-effect mr-4">Excalidraw</a>、
                                         <a href="free/detail/lottiefiles" target="_blank" class="link-effect mr-4">LottieFiles</a>、
-                                        <a href="free/detail/unsplash" target="_blank" class="link-effect">Unsplash</a>
+                                        <a href="free/detail/unsplash" target="_blank" class="link-effect mr-4">Unsplash</a>、
+                                        <a href="free/detail/whisper" target="_blank" class="link-effect">Whisper</a>
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-neutral-light transition-colors">
@@ -434,7 +437,9 @@ var _hmt = _hmt || [];
                                         <a href="free/detail/notion" target="_blank" class="link-effect mr-4">Notion</a>、
                                         <a href="free/detail/trello" target="_blank" class="link-effect mr-4">Trello</a>、
                                         <a href="free/detail/asana" target="_blank" class="link-effect mr-4">Asana</a>、
-                                        <a href="free/detail/wordpress" target="_blank" class="link-effect">WordPress</a>
+                                        <a href="free/detail/wordpress" target="_blank" class="link-effect mr-4">WordPress</a>、
+                                        <a href="free/detail/zapier" target="_blank" class="link-effect mr-4">Zapier</a>、
+                                        <a href="free/detail/zoom" target="_blank" class="link-effect">Zoom</a>
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-neutral-light transition-colors">
