--- a/free/sound-effects.html
+++ b/free/sound-effects.html
@@ -338,7 +338,7 @@
                         </div>
                         <div class="md:w-3/4 p-6">
                             <p class="text-gray-300 mb-6">
-                                A professional-grade sound library with high-quality audio素材. Their API gives access to categorized sounds with advanced filtering options. Great for commercial projects needing polished audio.
+                                A professional-grade sound library with high-quality audio API. Their API gives access to categorized sounds with advanced filtering options. Great for commercial projects needing polished audio.
                             </p>
                             
                             <div class="flex flex-wrap gap-2 mb-6">
