--- a/free/detail/laravel.html
+++ b/free/detail/laravel.html
@@ -9,6 +9,7 @@
     <script>
         // Tailwind 配置：夜间主题色与自定义样式
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
@@ -68,7 +69,7 @@
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body class="bg-dark-900 text-dark-400 font-sans min-h-screen">
+<body class="bg-dark-900 text-dark-400 font-sans min-h-screen ">
     <!-- 导航栏 -->
     <nav class="sticky top-0 z-50 bg-dark-900/95 backdrop-blur-md border-b border-dark-700 transition-all duration-300">
         <div class="container mx-auto px-4 py-4 flex flex-wrap items-center justify-between">
@@ -103,7 +104,7 @@
         <div class="absolute inset-0 bg-dark-900 opacity-80" id="codeBackground"></div>
         <div class="container mx-auto px-4 z-10 text-center">
             <h1 class="text-[clamp(2.5rem,8vw,5rem)] font-bold text-dark-300 mb-6 text-shadow leading-tight">
-                <span class="text-dark-accent">Laravel</span> 框架
+                <span class="text-dark-accent dark:text-red-400">Laravel</span> 框架
             </h1>
             <p class="text-[clamp(1rem,3vw,1.25rem)] text-dark-500 max-w-2xl mx-auto mb-8">
                 优雅的 PHP Web 开发框架，为开发者提供简洁、优雅的语法和丰富的功能生态
