--- a/sitemap.html
+++ b/sitemap.html
@@ -44,6 +44,36 @@
       }
     }
   </script>
+
+      <!-- 自定义工具类：统一深色模式样式 -->
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .content-auto {
+                content-visibility: auto;
+            }
+            /* 链接效果：适配深色模式 */
+            .link-effect {
+                @apply text-primary hover:text-primary/80 hover:underline transition-theme duration-200
+                       dark:text-blue-400 dark:hover:text-blue-300;
+            }
+            /* 区块分隔线：适配深色模式 */
+            .section-divider {
+                @apply border-t border-gray-200 my-10 dark:border-dark-border;
+            }
+            /* 卡片阴影：深色模式弱化阴影 */
+            .card-shadow {
+                @apply shadow-sm hover:shadow-md transition-shadow duration-300
+                       dark:shadow-none dark:hover:shadow-[0_4px_12px_rgba(0,0,0,0.3)];
+            }
+            /* 表格行 hover 效果：适配深色模式 */
+            .table-row-hover {
+                @apply hover:bg-neutral-light transition-theme duration-200
+                       dark:hover:bg-[#282828];
+            }
+        }
+    </style>
+
+  
   
   <!-- 自定义样式 -->
   <style type="text/tailwindcss">
