--- a/free/detail/cirlcecl.html
+++ b/free/detail/cirlcecl.html
@@ -174,7 +174,7 @@
         
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="max-w-4xl mx-auto text-center">
-                <h1 class="text-[clamp(2.5rem,6vw,4rem)] font-extrabold leading-tight mb-6 animate-fade-in bg-gradient-to-r from-primary to-secondary gradient-text">
+                <h1 class="text-[clamp(2.5rem,6vw,4rem)] font-extrabold leading-tight mb-6 animate-fade-in bg-gradient-to-r from-primary to-secondary gradient-text  dark:text-red-400">
                     CircleCI
                 </h1>
                 <p class="text-[clamp(1.1rem,2vw,1.5rem)] text-light-300 light:text-dark-100 mb-8 animate-slide-up text-balance">
@@ -1254,5 +1254,6 @@
             });
         });
     </script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
