--- a/free/detail/vue.html
+++ b/free/detail/vue.html
@@ -13,6 +13,7 @@
   <!-- 配置 Tailwind -->
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           colors: {
@@ -116,7 +117,7 @@
         <div class="md:w-1/2 mb-10 md:mb-0">
           <h1 class="text-[clamp(2.5rem,5vw,4rem)] font-bold text-white leading-tight text-shadow mb-6">
             Vue.js<br>
-            <span class="text-primary">渐进式 JavaScript 框架</span>
+            <span class="text-primary dark:text-red-400">渐进式 JavaScript 框架</span>
           </h1>
           <p class="text-xl text-gray-300 mb-8 max-w-lg">
             构建用户界面的渐进式框架，易学易用，性能出色，适用场景丰富。
