add-main.js-to-all

--- a/chat.html
+++ b/chat.html
@@ -326,5 +326,6 @@
         // 页面加载完成后初始化
         window.addEventListener('load', init);
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
