--- a/free/blockchain-explorers.html
+++ b/free/blockchain-explorers.html
@@ -1051,5 +1051,6 @@
         window.addEventListener('load', animateOnScroll);
         window.addEventListener('scroll', animateOnScroll);
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
