--- a/free/detail/freecodecamp.html
+++ b/free/detail/freecodecamp.html
@@ -1043,6 +1043,7 @@
             observer.observe(section);
         });
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
     
