--- a/free/detail/uptimerobot.html
+++ b/free/detail/uptimerobot.html
@@ -1114,5 +1114,6 @@
         // Initialize animations on load
         window.addEventListener('load', animateOnScroll);
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
