--- a/free/index.html
+++ b/free/index.html
@@ -442,5 +442,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
