--- a/verify-email.html
+++ b/verify-email.html
@@ -414,6 +414,6 @@
         // 页面加载时执行验证
         window.addEventListener('load', verifyEmailToken);
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
-    
