--- a/float-1.html
+++ b/float-1.html
@@ -478,5 +478,6 @@
     // 页面加载完成后初始化
     document.addEventListener('DOMContentLoaded', init);
   </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
