--- a/free/cdn.html
+++ b/free/cdn.html
@@ -1064,5 +1064,6 @@
             window.addEventListener('scroll', animateOnScroll);
         });
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
