--- a/free/chart.html
+++ b/free/chart.html
@@ -873,5 +873,5 @@ document.addEventListener('DOMContentLoaded', function() {
             }
         });
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
-</html>
