--- a/free/detail/exercism.html
+++ b/free/detail/exercism.html
@@ -1095,5 +1095,6 @@
         window.addEventListener('load', animateOnScroll);
         window.addEventListener('scroll', animateOnScroll);
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
