--- a/free/sound-effects.html
+++ b/free/sound-effects.html
@@ -1224,5 +1224,6 @@ document.getElementById('play-tone').addEventListener('click', () => {
             });
         });
     </script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
