set-missing-html

--- a/free/map.html
+++ b/free/map.html
@@ -1074,3 +1074,4 @@ GET https://api.mapbox.com/geocoding/v5/mapbox.places/London.json?access_token=Y
     </script>
   <script type="module" src="/main.js"></script>
 </body>
+</html>
