--- a/free/chart.html
+++ b/free/chart.html
@@ -875,3 +875,4 @@ document.addEventListener('DOMContentLoaded', function() {
     </script>
   <script type="module" src="/main.js"></script>
 </body>
+</html>
